--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>To Do</h1>
+    <small>Left click to mark as completed <br> Right click to remove todo list</small>
 
     <form id="form">
         <input type="text" id="input" class="input" autocomplete="off" placeholder="Text here..">
