added javascript feature add list and improved form style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form id="form">
         <input type="text" id="input" class="input" autocomplete="off" placeholder="Text here..">
         <ul class="todo-list">
-            <li>To Do List</li>
+            <!-- <li>To Do List</li> -->
         </ul>
     </form>
 
